Updating week 3 to include event user roles and error handling

--- a/event-planner-api/package.json
+++ b/event-planner-api/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
