--- a/event-planner-api/package.json
+++ b/event-planner-api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "mongoose": "^8.18.1",
     "swagger-jsdoc": "^6.2.8",
